--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-admin",
   "version": "0.1.0",
+  "homepage": "https://cdo91.github.io/react-dashboard",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -25,6 +26,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
@@ -39,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
